Modified comments and redone the diagonals
Simplified the diagonals func to be much shorter and be easier to add more diagonals if wanted.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <p>Puia Catalin Project</p>
   </footer>
   <audio id="buttonSound" src="SlotGame/sounds/buttonPress.mp3"></audio>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
